The Logstash AMI builds!

--- a/ansible/files/requirements.yml
+++ b/ansible/files/requirements.yml
@@ -1,5 +1,2 @@
-- src: kurron.block-device
-- src: kurron.mongodb
 - src: kurron.time
-- src: kurron.transparent-huge-pages
-- src: kurron.os-limits
+- src: kurron.logstash
